Updating react dependencies to 18.2.0

--- a/package.json
+++ b/package.json
@@ -22,10 +22,10 @@
     "lint": "eslint --quiet ./**/*.js"
   },
   "dependencies": {
-    "prop-types": "^15.6.1"
+    "prop-types": "^15.8.1"
   },
   "peerDependencies": {
-    "react": "16.x || 15.x"
+    "react": "18.x || 17.x || 16.x || 15.x"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.3",
@@ -36,8 +36,8 @@
     "eslint-plugin-react": "^7.7.0",
     "gh-pages": "^0.11.0",
     "nwb": "0.22.x",
-    "react": "^16.0.0",
-    "react-dom": "^16.0.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "author": "Dan Fessler",
   "homepage": "http://www.DanFessler.com",
